One last update before I make the major changes to GameplayScreen.cs

--- a/GameStateManagementSample/GameStateManagementSample (Windows).csproj
+++ b/GameStateManagementSample/GameStateManagementSample (Windows).csproj
@@ -69,6 +69,7 @@
     <Compile Include="AnimatedSprite.cs" />
     <Compile Include="AnimationManager.cs" />
     <Compile Include="AnimationScene.cs" />
+    <Compile Include="Blinker.cs" />
     <Compile Include="Boundary.cs" />
     <Compile Include="CollisionData.cs" />
     <Compile Include="DirXYMover.cs" />
