--- a/GameStateManagementSample/GameStateManagementSample (Windows).csproj
+++ b/GameStateManagementSample/GameStateManagementSample (Windows).csproj
@@ -74,15 +74,19 @@
     <Compile Include="CollisionData.cs" />
     <Compile Include="DirXYMover.cs" />
     <Compile Include="Drawable.cs" />
+    <Compile Include="DuckCall.cs" />
     <Compile Include="DuckHuntBall.cs" />
     <Compile Include="DuckPopulation.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="CollisionUtils.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="LinearXYMover.cs" />
     <Compile Include="LogXYMover.cs" />
     <Compile Include="Paddle.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="PongBall.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Score.cs" />
     <Compile Include="ScreenManager\GameScreen.cs" />
     <Compile Include="ScreenManager\InputState.cs" />
     <Compile Include="ScreenManager\ScreenManager.cs" />
@@ -96,6 +100,7 @@
     <Compile Include="Screens\OptionsMenuScreen.cs" />
     <Compile Include="Screens\PauseMenuScreen.cs" />
     <Compile Include="Screens\PlayerIndexEventArgs.cs" />
+    <Compile Include="Shot.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="SpriteDecorator.cs" />
     <Compile Include="TimeOutDrawable.cs" />
