--- a/GameStateManagementSample/GameStateManagementSample (Windows).csproj
+++ b/GameStateManagementSample/GameStateManagementSample (Windows).csproj
@@ -72,6 +72,7 @@
     <Compile Include="Blinker.cs" />
     <Compile Include="Boundary.cs" />
     <Compile Include="Cloud.cs" />
+    <Compile Include="Clouds.cs" />
     <Compile Include="CollisionData.cs" />
     <Compile Include="DirXYMover.cs" />
     <Compile Include="Drawable.cs" />
@@ -79,7 +80,7 @@
     <Compile Include="DuckHuntBall.cs" />
     <Compile Include="DuckPopulation.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="CollisionUtils.cs" />
+    <Compile Include="HelperUtils.cs" />
     <Compile Include="Image.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="LinearXYMover.cs" />
