--- a/GameStateManagementSample/GameStateManagementSample (Windows).csproj
+++ b/GameStateManagementSample/GameStateManagementSample (Windows).csproj
@@ -78,54 +78,54 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AlphaFader.cs" />
-    <Compile Include="AnimatedSprite.cs" />
+    <Compile Include="Animations\AlphaFader.cs" />
+    <Compile Include="Drawable\AnimatedSprite.cs" />
     <Compile Include="AnimationManager.cs" />
     <Compile Include="AnimationScene.cs" />
-    <Compile Include="Blinker.cs" />
+    <Compile Include="Animations\Blinker.cs" />
     <Compile Include="Boundary.cs" />
-    <Compile Include="Clouds.cs" />
+    <Compile Include="DuckHunt\Clouds.cs" />
     <Compile Include="CollisionData.cs" />
     <Compile Include="CountTimer.cs" />
-    <Compile Include="DirXYMover.cs" />
-    <Compile Include="Drawable.cs" />
-    <Compile Include="DuckHuntBall.cs" />
-    <Compile Include="DuckHuntGameOverMenuScreen.cs" />
-    <Compile Include="DuckHuntPaddle.cs" />
-    <Compile Include="DuckPopulation.cs" />
+    <Compile Include="Animations\DirXYMover.cs" />
+    <Compile Include="Drawable\Drawable.cs" />
+    <Compile Include="DuckHunt\DuckHuntBall.cs" />
+    <Compile Include="DuckHunt\DuckHuntGameOverMenuScreen.cs" />
+    <Compile Include="DuckHunt\DuckHuntPaddle.cs" />
+    <Compile Include="DuckHunt\DuckPopulation.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GridMenu.cs" />
     <Compile Include="HelperUtils.cs" />
-    <Compile Include="Image.cs" />
+    <Compile Include="Drawable\Image.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="LevelSelectorScreen.cs" />
-    <Compile Include="LinearXYMover.cs" />
-    <Compile Include="LogXYMover.cs" />
-    <Compile Include="MenuFontItem.cs" />
-    <Compile Include="MenuItem.cs" />
-    <Compile Include="MenuSpriteItem.cs" />
+    <Compile Include="Animations\LinearXYMover.cs" />
+    <Compile Include="Animations\LogXYMover.cs" />
+    <Compile Include="Screens\MenuFontItem.cs" />
+    <Compile Include="Screens\MenuItem.cs" />
+    <Compile Include="Screens\MenuSpriteItem.cs" />
     <Compile Include="Paddle.cs" />
-    <Compile Include="DuckHuntPlayer.cs" />
+    <Compile Include="DuckHunt\DuckHuntPlayer.cs" />
     <Compile Include="Ball.cs" />
-    <Compile Include="PongBall.cs" />
-    <Compile Include="PongPauseMenuScreen.cs" />
+    <Compile Include="Pong\PongBall.cs" />
+    <Compile Include="Pong\PongPauseMenuScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager\GameScreen.cs" />
     <Compile Include="ScreenManager\InputState.cs" />
     <Compile Include="ScreenManager\ScreenManager.cs" />
     <Compile Include="ScreenObject.cs" />
     <Compile Include="Screens\BackgroundScreen.cs" />
-    <Compile Include="Screens\DuckHuntGameplayScreen.cs" />
+    <Compile Include="DuckHunt\DuckHuntGameplayScreen.cs" />
     <Compile Include="Screens\LoadingScreen.cs" />
     <Compile Include="Screens\MainMenuScreen.cs" />
     <Compile Include="Screens\MenuEntry.cs" />
     <Compile Include="Screens\MenuScreen.cs" />
-    <Compile Include="Screens\DuckHuntPauseMenuScreen.cs" />
+    <Compile Include="DuckHunt\DuckHuntPauseMenuScreen.cs" />
     <Compile Include="Screens\PlayerIndexEventArgs.cs" />
     <Compile Include="Screens\PongGameplayScreen.cs" />
-    <Compile Include="Sprite.cs" />
-    <Compile Include="SpriteDecorator.cs" />
-    <Compile Include="TimeOutDrawable.cs" />
+    <Compile Include="Drawable\Sprite.cs" />
+    <Compile Include="Animations\SpriteDecorator.cs" />
+    <Compile Include="Animations\TimeOutDrawable.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
@@ -195,6 +195,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
